New foundation skills content

--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -275,6 +275,7 @@ a {
 .stories.cre8te-opportunites,
 .stories.glasgow-life,
 .stories.queens-cross,
+.skill-up.foundations,
 .skill-up.communicating,
 .skill-up.handling-info,
 .skill-up.transacting,
