--- a/db/configurations/digitalparticipation/templates/skill-up.hbs
+++ b/db/configurations/digitalparticipation/templates/skill-up.hbs
@@ -39,6 +39,39 @@
   </div>
   <div class="mdc-layout-grid__inner expand skills">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
+      <!-- <h3>
+        <span class="number">0</span>
+      </h3> -->
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-2-phone">
+      <h3>
+        Foundation Skills
+      </h3>
+    </div>
+    <div class="mdc-layout-grid__cell hide-on-med-and-up mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
+      <h3>
+        <a href="skill-up/foundations">
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        </a>
+      </h3>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
+      <!-- <p>
+      </p> -->
+    </div>
+    <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
+      <h3>
+        <a href="skill-up/foundations">
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        </a>
+      </h3>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+      <hr class="nomargin" />
+    </div>
+  </div>
+  <div class="mdc-layout-grid__inner expand skills">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
       <h3>
         <span class="number">1</span>
       </h3>
