--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -655,6 +655,20 @@ primary-dark: #263238
       color: map-get($themeServices, 'primary') !important;
     }
   }
+  .running-a-charity .footer-image.join-our-hub,
+  .setting-up-a-charity .footer-image.join-our-hub,
+  .running-your-organisation .footer-image.join-our-hub {
+    background-image: linear-gradient(
+    map-get($themePosts, 'primary-overlay-start'),
+    map-get($themePosts, 'primary-overlay-start')
+    ),
+    url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/edward-new-940x470.jpg') !important;
+    .mdc-button:hover {
+      background-color: white !important;
+      border-color: map-get($themePosts, 'primary-dark') !important;
+      color: map-get($themePosts, 'primary') !important;
+    }
+  }
 
   footer {
     color: white;
