Content alterations to Scotland for Europe

--- a/db/configurations/scotlandforeurope/layouts/default.hbs
+++ b/db/configurations/scotlandforeurope/layouts/default.hbs
@@ -108,7 +108,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-9-desktop">
                   <h3>About</h3>
                   <p>
-                    <strong>Scotland for Europe</strong> is a Scottish civil society campaign to stay in the EU, supported by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>
+                    <strong>Scotland for Europe</strong> emerged from a discussion between a range of like-minded civil society activists. In its initial phase, the campaign is being coordinated on a voluntary basis by Vanessa Glynn, Chair of the <a href="http://www.euromovescotland.org.uk/">European Movement in Scotland</a> (EmiS), Colin Campbell Executive, Director of <a href="http://social-capital.net/">Assist Social Capital</a>, Kirsty Hughes, Director of the <a href="https://www.scer.scot/">Scottish Centre on European Relations</a> and the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>. EMiS has received a small grant from <a href="https://www.bestforbritain.org/">Best for Britain</a> towards start-up costs.
                   </p>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
