--- a/db/configurations/scotlandforeurope/templates/declaration.hbs
+++ b/db/configurations/scotlandforeurope/templates/declaration.hbs
@@ -17,3 +17,7 @@
 <p>
   <a href="/signatories" class="mdc-button mdc-button--raised">View signatories</a>
 </p>
+
+<p>
+  <a href="https://www.change.org/p/u-k-government-scotland-for-europe-demands-an-eu-future" class="mdc-button mdc-button--raised">Add your voice</a>
+</p>
