--- a/db/configurations/scotlandforeurope/templates/home.hbs
+++ b/db/configurations/scotlandforeurope/templates/home.hbs
@@ -13,3 +13,7 @@
 <p>
   <a href="/the-declaration" class="mdc-button mdc-button--raised">Read the Declaration</a>
 </p>
+
+<p>
+  Scotland for Europe invites people across Scotland to <a href="https://www.change.org/p/u-k-government-scotland-for-europe-demands-an-eu-future">sign the Declaration</a> to stay in the EU. Scotland for Europe will act as a network for those already taking action (or who want to take action) to halt Brexit. Whether at street stalls, local events, letters to parliamentarians, petitions or social media action, people in Scotland and across the UK are invited to connect through <strong>#ScotlandforEurope</strong> to help maintain our EU membership.
+</p>
