--- a/db/configurations/scvo/templates/pages/page-cjs-employees.hbs
+++ b/db/configurations/scvo/templates/pages/page-cjs-employees.hbs
@@ -11,20 +11,7 @@
           {{> menu_cjs_employees}}
           {{> sidebar_cjs}}
         </div>
-        {{#compare data.supplimentaryResponses.related_posts.hits.total ">" 0 ~}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
-          <h3 class="blogs">Related posts</h3>
-          <div class="mdc-layout-grid">
-            <div class="mdc-layout-grid__inner">
-              {{#each data.supplimentaryResponses.related_posts.hits.hits ~}}
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                {{{_source.rendered.scvo_gist}}}
-              </div>
-              {{/each ~}}
-            </div>
-          </div>
-        </div>
-        {{/compare ~}}
+        {{> related_posts}}
       </div>
     </div>
   </div>
