--- a/db/configurations/scvo/templates/pages/page-cjs-landing.hbs
+++ b/db/configurations/scvo/templates/pages/page-cjs-landing.hbs
@@ -28,20 +28,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content page-content">
           {{{data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
         </div>
-        {{#compare data.supplimentaryResponses.related_posts.hits.total ">" 0 ~}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
-          <h3 class="blogs">Related posts</h3>
-          <div class="mdc-layout-grid">
-            <div class="mdc-layout-grid__inner">
-              {{#each data.supplimentaryResponses.related_posts.hits.hits ~}}
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
-                {{{_source.rendered.scvo_gist}}}
-              </div>
-              {{/each ~}}
-            </div>
-          </div>
-        </div>
-        {{/compare ~}}
+        {{> related_posts}}
       </div>
     </div>
   </div>
