--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -7,6 +7,9 @@ $mdc-theme-primary-dark: #1e3b12;
 $mdc-theme-complimentary: #D1C4E9; // Deep purple 100
 $mdc-theme-complimentary-light: #EDE7F6; // Deep purple 50
 $mdc-theme-complimentary-dark: #4527A0; // Deep purple 800
+// $mdc-theme-complimentary: #212121;
+// $mdc-theme-complimentary-light: #BDBDBD;
+// $mdc-theme-complimentary-dark: #000000;
 
 $mdc-theme-secondary: #E0E0E0; // Gray 300
 $mdc-theme-secondary-light: #f5f5f5; // Gray 100
