--- a/db/configurations/scvo/partials/pagination.hbs
+++ b/db/configurations/scvo/partials/pagination.hbs
@@ -1,7 +1,7 @@
 {{#compare paging.totalPages ">" 1 ~}}
 <ul class="pagination inline-list">
   <li class="{{#if paging.prevPage}}{{else}}disabled{{/if}}">
-    <a class="pagination-arrow" href="{{request.params.uri.pathname}}?{{{querystringify ../request.params.query page=paging.prevPage}}}"><i class="fa fa-fw fa-chevron-left"></i></a>
+    <a class="pagination-arrow" href="{{request.params.uri.pathname}}?{{{querystringify ../request.params.query page=paging.prevPage}}}"><i class="far fa-fw fa-chevron-left"></i></a>
   </li>
   {{#each paging.pageRange ~}}
   <li class="{{#compare ../paging.currentPage "===" this.pageNumber}}current-page {{/compare}}pagination-distance-{{this.distance}}">
@@ -11,7 +11,7 @@
   </li>
   {{/each ~}}
   <li class="{{#if paging.nextPage}}{{else}}disabled{{/if}}">
-    <a class="pagination-arrow" href="{{request.params.uri.pathname}}?{{{querystringify ../request.params.query page=paging.nextPage}}}"><i class="fa fa-fw fa-chevron-right"></i></a>
+    <a class="pagination-arrow" href="{{request.params.uri.pathname}}?{{{querystringify ../request.params.query page=paging.nextPage}}}"><i class="far fa-fw fa-chevron-right"></i></a>
   </li>
 </ul>
 {{/compare ~}}
