Misc styling (charter titles)

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -283,6 +283,9 @@ footer h3,
 .mdc-drawer--temporary {
   z-index: 100;
 }
+.mdc-button {
+  transition: 0.3s;
+}
 .mdc-drawer--temporary .mdc-drawer__header::before {
   padding-top: $header-upper-height;
 }
