--- a/assets/css/humanrightsdeclaration-styles.scss
+++ b/assets/css/humanrightsdeclaration-styles.scss
@@ -225,6 +225,7 @@ a:hover {
       padding-left: 0;
     }
     .mdc-tab {
+      transition: 0.2s;
       min-width: 0;
       font-size: 1.1rem;
       padding: 0 $unit*.7;
