--- a/assets/css/scotlandforeurope-styles.scss
+++ b/assets/css/scotlandforeurope-styles.scss
@@ -239,6 +239,7 @@ a:hover {
         margin-left: 0 !important;
       }
       .mdc-tab {
+        transition: 0.2s;
         min-width: 0;
         font-size: 1rem;
         padding: $unit/2 0;
