--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1241,6 +1241,7 @@ section.search {
       h3 {
         margin: 0;
         .fal {
+          transition: 0.3s;
           border: $unit/8 solid white;
           border-radius: 50%;
           padding: $unit*1.75;
@@ -2480,6 +2481,7 @@ body.i-love-charity .page-info,
   display: inline-table;
   line-height: 1.96rem;
   outline: none;
+  transition: 0.3s;
 }
 .mdc-button.mdc-button--raised.pull-right {
   margin-top: $unit/2;
