--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -918,6 +918,7 @@ hr {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 12rem;
     // margin: 0 -0.75rem;
     // padding: $unit;
     // vertical-align: middle;
