--- a/db/configurations/humanrightsdeclaration/templates/privacy.hbs
+++ b/db/configurations/humanrightsdeclaration/templates/privacy.hbs
@@ -3,7 +3,7 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h1>Privacy policy</h1>
       <p>
-        <strong>The privacy notice for this website it currently being updated to comply with GDPR but we do not plan to make any material changes to the way we deal with information collected on this site. The new privacy notice will replace this one by 1 June 2018</strong>
+        <strong>The privacy notice for this website it currently being updated to comply with GDPR but we do not plan to make any material changes to the way we deal with information collected on this site. The new privacy notice will replace this one shortly</strong>
       </p>
       <h4>1. INTRODUCTION</h4>
 
