Added contact page to europe campaign site

--- a/assets/css/scotlandforeurope-styles.scss
+++ b/assets/css/scotlandforeurope-styles.scss
@@ -191,6 +191,13 @@ a:hover {
   background: $mdc-theme-secondary;
 }
 
+.fa-ul {
+  margin-left: 1.55rem;
+  .fa-li span {
+    color: $mdc-theme-primary-dark;
+  }
+}
+
 .container-fluid {
   max-width: 1280px;
   width: 95%;
