Fixing Digital participation and removing old menu stuff

--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -731,11 +731,13 @@ main {
   .detail .collapsible {
     border: none;
     box-shadow: none;
+    width:100%;
     .collapsible-header {
       opacity: 0.5;
       background-color: inherit;
       border: none;
       padding: 1.5rem 0 0.5rem;
+      width:100%;
     }
     .collapsible-header.active {
       opacity: 1;
@@ -744,6 +746,7 @@ main {
       color: white;
       padding: 1rem 2rem;
       border: none;
+      width:100%;
       ul {
         padding: 0.5rem 0;
         border-top: $brand-border-width solid white;
@@ -1180,7 +1183,7 @@ footer {
 }
 
 .mdc-temporary-drawer {
-  display: none;
+  display: block;
   .mdc-temporary-drawer__header-content {
     direction: ltr;
     padding: $unit;
