Hide events from results if new checkbox selected

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -4,9 +4,9 @@ $mdc-theme-primary-light: #d1edc4;
 $mdc-theme-primary-dark: #1e3b12;
 // $mdc-theme-old: #58a934;
 
-$mdc-theme-complimentary: #D1C4E9; // Deep purple 100
-$mdc-theme-complimentary-light: #EDE7F6; // Deep purple 50
-$mdc-theme-complimentary-dark: #4527A0; // Deep purple 800
+$mdc-theme-complimentary: #d6e9c6; // Deep purple 100
+$mdc-theme-complimentary-light: #eef7ea; // Deep purple 50
+$mdc-theme-complimentary-dark: #58a934; // Deep purple 800
 // $mdc-theme-complimentary: #212121;
 // $mdc-theme-complimentary-light: #BDBDBD;
 // $mdc-theme-complimentary-dark: #000000;
