Europe campaign text updates

--- a/db/configurations/scotlandforeurope/templates/home.hbs
+++ b/db/configurations/scotlandforeurope/templates/home.hbs
@@ -3,17 +3,18 @@
 </h3>
 
 <p>
-  This campaign is designed to show that the majority support in Scotland for ‘remain’ has not gone away.
+  This campaign is designed to stimulate action and debate across Scotland and the UK, to demand that we stay within Europe.
 </p>
 
 <p>
-  Scotland for Europe is and shall remain a grass-roots, networked campaign.
+  Scotland for Europe is and shall remain a positive grass-roots, networked campaign.
 </p>
 
 <p>
-  <a href="/the-declaration" class="mdc-button mdc-button--raised">Read the Declaration</a>
+  <a href="/the-declaration" class="mdc-button mdc-button--raised">Read &amp; Sign the Declaration</a>
 </p>
 
+<h4>Call to Action</h4>
 <p>
-  Scotland for Europe invites people across Scotland to <a href="https://www.change.org/p/u-k-government-scotland-for-europe-demands-an-eu-future">sign the Declaration</a> to stay in the EU. Scotland for Europe will act as a network for those already taking action (or who want to take action) to halt Brexit. Whether at street stalls, local events, letters to parliamentarians, petitions or social media action, people in Scotland and across the UK are invited to connect through <strong>#ScotlandforEurope</strong> to help maintain our EU membership.
+  The Scotland for Europe campaign invites people across Scotland to <a href="https://www.change.org/p/u-k-government-scotland-for-europe-demands-an-eu-future">sign the Declaration</a> to stay in the EU. It will act as a network for all those who are already taking, or who want to take, action and connect through <strong>#ScotlandforEurope</strong> to halt Brexit – whether street stalls, local events, letters to MPs, petitions, social media action and more, both in Scotland and across the UK.
 </p>
