--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -78,7 +78,7 @@ if(location.host.indexOf('.local') > -1){
           <div class="mdc-top-app-bar__row mdc-top-app-bar__upper">
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
               <button class="mdc-top-app-bar__navigation-icon hide-lg" data-drawer-target="#mobile-menu">
-                <span class="far fa-fw fa-bars"></span>
+                <span class="far fa-fw fa-2x fa-bars"></span>
               </button>
               {{#if route.metaData.sidebarButton}}
               <button class="mdc-top-app-bar__navigation-icon {{route.metaData.sidebarButton.classes}}" data-drawer-target="#sidebar-temporary" title="{{route.metaData.sidebarButton.tooltip}}">
@@ -90,7 +90,7 @@ if(location.host.indexOf('.local') > -1){
                   <metadata id="metadata7">image/svg+xml</metadata>
                   <g transform="scale(0.70)">
                     <title>Goodmoves</title>
-                    <g font-style="normal" font-weight="normal" font-size="40px" font-family="sans-serif" fill="#ffffff" stroke-width="1px" id="flowRoot3336">
+                    <g font-style="normal" font-weight="normal" font-size="40px" font-family="sans-serif" fill="#42842A" stroke-width="1px" id="flowRoot3336">
                       <path id="path4662" d="m24.360004,27.719999q0,-3.9 -2.16,-6.12q-2.16,-2.22 -5.34,-2.22q-3.18,0 -5.52,2.22q-2.28,2.22 -2.28,6.06q0,3.84 2.22,6.24q2.28,2.34 5.52,2.34q3.24,0 5.4,-2.34q2.16,-2.34 2.16,-6.18zm1.26,11.34q-4.26,4.74 -10.62,4.74q-6.3,0 -10.68,-4.26q-4.32,-4.32 -4.32,-11.46q0,-7.2 4.44,-11.76q4.5,-4.62 10.26,-4.62q5.76,0 9.54,4.74l0,-4.26l9,0l0,28.14q0,4.32 -1.5,7.68q-1.5,3.36 -4.02,5.28q-4.98,3.96 -11.76,3.96q-3.6,0 -7.38,-1.2q-3.72,-1.14 -6.54,-3.3l3.48,-6.78q4.44,3.36 9.36,3.36q4.98,0 7.86,-2.46q2.88,-2.46 2.88,-7.8z"
                       />
                       <path id="path4670" d="m42.848124,27.239999l0,17.28l-6.72,0l0,-31.92l6.72,0l0,5.82q1.44,-2.94 4.32,-4.62q2.94,-1.68 6.3,-1.68q7.56,0 10.26,6.24q4.74,-6.24 11.82,-6.24q5.4,0 8.7,3.3q3.36,3.3 3.36,9.54l0,19.56l-6.72,0l0,-17.52q0,-8.82 -7.32,-8.82q-3.42,0 -6,2.22q-2.52,2.16 -2.64,6.36l0,17.76l-6.72,0l0,-17.52q0,-4.56 -1.62,-6.66q-1.62,-2.16 -5.1,-2.16q-3.48,0 -6.06,2.34q-2.58,2.28 -2.58,6.72z"
@@ -105,7 +105,7 @@ if(location.host.indexOf('.local') > -1){
                     <metadata id="metadata7">image/svg+xml</metadata>
                     <g transform="scale(0.80)">
                       <title>Goodmoves</title>
-                      <g font-style="normal" font-weight="normal" font-size="40px" font-family="sans-serif" fill="#ffffff" stroke-width="1px" id="flowRoot3336">
+                      <g font-style="normal" font-weight="normal" font-size="40px" font-family="sans-serif" fill="#42842A" stroke-width="1px" id="flowRoot3336">
                         <path id="path4662" d="m24.360004,27.719999q0,-3.9 -2.16,-6.12q-2.16,-2.22 -5.34,-2.22q-3.18,0 -5.52,2.22q-2.28,2.22 -2.28,6.06q0,3.84 2.22,6.24q2.28,2.34 5.52,2.34q3.24,0 5.4,-2.34q2.16,-2.34 2.16,-6.18zm1.26,11.34q-4.26,4.74 -10.62,4.74q-6.3,0 -10.68,-4.26q-4.32,-4.32 -4.32,-11.46q0,-7.2 4.44,-11.76q4.5,-4.62 10.26,-4.62q5.76,0 9.54,4.74l0,-4.26l9,0l0,28.14q0,4.32 -1.5,7.68q-1.5,3.36 -4.02,5.28q-4.98,3.96 -11.76,3.96q-3.6,0 -7.38,-1.2q-3.72,-1.14 -6.54,-3.3l3.48,-6.78q4.44,3.36 9.36,3.36q4.98,0 7.86,-2.46q2.88,-2.46 2.88,-7.8z"
                         />
                         <path id="path4664" d="m42.848124,28.379999q0,3.96 2.22,6.48q2.28,2.46 5.76,2.46q3.54,0 5.76,-2.46q2.28,-2.52 2.28,-6.48q0,-3.96 -2.28,-6.48q-2.22,-2.52 -5.76,-2.52q-3.48,0 -5.76,2.52q-2.22,2.52 -2.22,6.48zm25.08,0q0,7.02 -4.86,11.82q-4.86,4.8 -12.24,4.8q-7.32,0 -12.18,-4.8q-4.86,-4.8 -4.86,-11.82q0,-7.02 4.86,-11.82q4.86,-4.86 12.18,-4.86q7.38,0 12.24,4.86q4.86,4.8 4.86,11.82z"
@@ -140,7 +140,7 @@ if(location.host.indexOf('.local') > -1){
               </nav>
             </section>
           </div>
-          <div class="mdc-top-app-bar__row mdc-top-app-bar__lower">
+          <div class="mdc-top-app-bar__row mdc-top-app-bar__lower hide-sm hide-md">
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
               <nav class="mdc-tab-bar mdc-tab-bar__left hide-sm hide-md" id="main-tab-bar">
                 {{#each context.menus.main ~}}
@@ -196,12 +196,12 @@ if(location.host.indexOf('.local') > -1){
       <aside class="mdc-drawer mdc-drawer--temporary" id="mobile-menu" data-mdc-auto-init="MDCTemporaryDrawer">
         <nav class="mdc-drawer__drawer">
           <header class="mdc-drawer__header">
-            <div class="mdc-drawer__header-content mdc-theme--primary-bg">
+            <div class="mdc-drawer__header-content">
               <svg width="222" height="42" xmlns="http://www.w3.org/2000/svg">
                 <metadata id="metadata7">image/svg+xml</metadata>
                 <g transform="scale(0.70)">
                   <title>goodmoves</title>
-                  <g font-style="normal" font-weight="normal" font-size="40px" font-family="sans-serif" fill="#ffffff" stroke-width="1px" id="flowRoot3336">
+                  <g font-style="normal" font-weight="normal" font-size="40px" font-family="sans-serif" fill="#42842A" stroke-width="1px" id="flowRoot3336">
                     <path id="path4662" d="m24.360004,27.719999q0,-3.9 -2.16,-6.12q-2.16,-2.22 -5.34,-2.22q-3.18,0 -5.52,2.22q-2.28,2.22 -2.28,6.06q0,3.84 2.22,6.24q2.28,2.34 5.52,2.34q3.24,0 5.4,-2.34q2.16,-2.34 2.16,-6.18zm1.26,11.34q-4.26,4.74 -10.62,4.74q-6.3,0 -10.68,-4.26q-4.32,-4.32 -4.32,-11.46q0,-7.2 4.44,-11.76q4.5,-4.62 10.26,-4.62q5.76,0 9.54,4.74l0,-4.26l9,0l0,28.14q0,4.32 -1.5,7.68q-1.5,3.36 -4.02,5.28q-4.98,3.96 -11.76,3.96q-3.6,0 -7.38,-1.2q-3.72,-1.14 -6.54,-3.3l3.48,-6.78q4.44,3.36 9.36,3.36q4.98,0 7.86,-2.46q2.88,-2.46 2.88,-7.8z"
                     />
                     <path id="path4664" d="m42.848124,28.379999q0,3.96 2.22,6.48q2.28,2.46 5.76,2.46q3.54,0 5.76,-2.46q2.28,-2.52 2.28,-6.48q0,-3.96 -2.28,-6.48q-2.22,-2.52 -5.76,-2.52q-3.48,0 -5.76,2.52q-2.22,2.52 -2.22,6.48zm25.08,0q0,7.02 -4.86,11.82q-4.86,4.8 -12.24,4.8q-7.32,0 -12.18,-4.8q-4.86,-4.8 -4.86,-11.82q0,-7.02 4.86,-11.82q4.86,-4.86 12.18,-4.86q7.38,0 12.24,4.86q4.86,4.8 4.86,11.82z"
